<resources>
    <string name="app_name">红星OM</string>
    <string name="title_activity_welcome">红星OM</string>
    <string name="title_activity_main">项目管理</string>
    <string name="title_activity_profile">个人信息</string>
    <string name="title_activity_profile_modify">编辑个人信息</string>
    <string name="title_activity_measure">实测实量</string>
    <string name="title_activity_third_estimate">第三方评估</string>
    <string name="title_activity_third_estimate_detail">第三方评估详细</string>
    <string name="title_activity_estimate_report">第三方评估报告</string>
    <string name="title_activity_estimate_report_detail">第三方评估报告详细</string>
    <string name="title_activity_quyu">区域连接检查</string>
    <string name="title_activity_quyu_detail">区域连接检查详细</string>
    <string name="title_activity_quyu_report">区域连接检查报告</string>
    <string name="title_activity_quyu_report_detail">区域连接检查报告详细</string>
    <string name="title_activity_anquan">安全文明检查</string>
    <string name="title_activity_anquan_detail">安全文明检查详细</string>
    <string name="title_activity_anquan_report">安全文明检查报告</string>
    <string name="title_activity_anquan_report_detail">安全文明检查报告详细</string>
    <string name="title_activity_third_estimate_submit">填报消项</string>
    <string name="title_activity_special_check">专项检查</string>
    <string name="title_activity_special_check_submit">专项检查填报</string>
    <string name="title_activity_room_check">一房一验</string>
    <string name="title_activity_room_check_submit">一房一验填报</string>
    <string name="title_activity_passport_upload">证照查看</string>
    <string name="title_activity_passport_detail">证照详细</string>
    <string name="title_activity_passport_upload_modify">编辑证照信息</string>
    <string name="title_activity_passport_type">证照类型</string>
    <string name="title_activity_modify_password">修改密码</string>
    <string name="title_activity_notification">消息设定</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="title_activity_setting">系统设置</string>
    <string name="title_activity_offline">离线任务</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">用户注册</string>
    <string name="title_activity_outter_system">外部系统</string>
    <string name="title_activity_server_setting">服务器设置</string>
    <string name="action_bar_notification">消息</string>
    <string name="action_bar_save">保存</string>
    <string name="action_bar_select_project">选择项目</string>
    <string name="action_change_mode">切换显示模式</string>
    <string name="action_search">查询</string>
    <string name="action_download">下载</string>
    <string name="action_create">填报</string>
    <string name="action_task">查看下载任务</string>
    <string name="action_download_all">下载全部</string>
    <string name="action_upload_all">上传全部</string>
    <string name="action_clear_all">删除全部</string>
    <string name="txt_loading">正在加载......</string>
    <string name="txt_downloading">已加入下载任务</string>
    <string name="txt_downloading_hint">下载中</string>
    <string name="txt_downloaded_hint">已下载</string>
    <string name="tab_community">首页</string>
    <string name="tab_work">办公</string>
    <string name="tab_contact">联系</string>
    <string name="tab_profile">我的</string>
    <string name="search_title">查询条件</string>
    <string name="search_project">项目</string>
    <string name="search_passport_category">证照类型</string>
    <string name="search_passport_category_hint">请输入证照类型</string>
    <string name="search_button">查询</string>
    <string name="btn_login">登    录</string>
    <string name="txt_login_id">编号/邮箱/手机</string>
    <string name="txt_password">密码</string>
    <string name="txt_server_setting"><u>服务器设置</u></string>
    <string name="txt_register"><u>用户注册</u></string>
    <string name="server_address">服务器地址</string>
    <string name="image_server_address">图片服务器地址</string>
    <string name="server_address_hint">请输入服务器地址</string>
    <string name="image_server_address_hint">请输入图片服务器地址</string>
    <string name="register_login_id">登录名</string>
    <string name="register_username">姓名</string>
    <string name="register_email">邮箱</string>
    <string name="register_phone">手机</string>
    <string name="register_password">密码</string>
    <string name="register_button">注    册</string>
    <string name="txt_original_password">原始密码</string>
    <string name="txt_new_password">新密码</string>
    <string name="txt_confirm_password">确认密码</string>
    <string name="btn_confirm">确    定</string>
    <string name="original_password_empty">请输入原始密码</string>
    <string name="new_password_empty">请输入新密码</string>
    <string name="confirm_password_empty">请输入确认密码</string>
    <string name="new_not_equal_confirm">新密码和确认密码不同</string>
    <string name="btn_bind_outter_system">绑定</string>
    <string name="title_community_name">首页</string>
    <string name="title_work_name">办公</string>
    <string name="title_contact_name">联系</string>
    <string name="txt_user_code_title">编号：</string>
    <string name="txt_row_message">消息通知</string>
    <string name="txt_row_setting">系统设置</string>
    <string name="txt_row_password">修改密码</string>
    <string name="txt_offline_task">离线任务</string>
    <string name="txt_row_buffer">清除缓存</string>
    <string name="txt_row_advice">意见反馈</string>
    <string name="txt_row_sync">检查更新</string>
    <string name="txt_row_about">关于我们</string>
    <string name="txt_logout">退出登录</string>
    <string name="txt_personal_info_title">个人信息</string>
    <string name="txt_head_img_title">头像</string>
    <string name="txt_user_id_title">编号</string>
    <string name="txt_user_name_title">姓名</string>
    <string name="txt_user_sex_title">性别</string>
    <string name="txt_user_email_title">邮箱</string>
    <string name="txt_user_phone_title">手机</string>
    <string name="txt_user_name">编辑姓名</string>
    <string name="txt_user_sex">选择性别</string>
    <string name="txt_user_email">编辑邮箱</string>
    <string name="txt_user_phone">编辑手机</string>
    <string name="txt_user_name_hint">请输入姓名</string>
    <string name="txt_user_sex_hint">请选择性别</string>
    <string name="txt_user_email_hint">请输入邮箱</string>
    <string name="txt_user_phone_hint">请输入手机</string>
    <string name="txt_male">男</string>
    <string name="txt_female">女</string>
    <string name="title_logout_confirm">您是否确认退出？</string>
    <string name="title_clear_buffer_confirm">您是否确认清空缓存？</string>
    <string name="title_delete_image_confirm">您是否确认删除图片？</string>
    <string name="title_delete_common_confirm">您是否确认删除该项？</string>
    <string name="title_delete_all_common_confirm">您是否确认删除全部？</string>
    <string name="clear_buffer_success">清除缓存成功</string>
    <string name="estimate_only_myself">只看自己</string>
    <string name="estimate_item_category_important">重要</string>
    <string name="estimate_item_category_general">一般</string>
    <string name="estimate_item_category">分类</string>
    <string name="estimate_item_character">性质</string>
    <string name="estimate_item_area">区域</string>
    <string name="estimate_item_project">项目</string>
    <string name="estimate_item_partition">所属分布工程</string>
    <string name="estimate_item_incharger">整改人</string>
    <string name="estimate_item_checker">验收人</string>
    <string name="estimate_item_start_date">开始日期</string>
    <string name="estimate_item_end_date">完成日期</string>
    <string name="estimate_item_description">问题描述</string>
    <string name="estimate_item_submit">整改措施</string>
    <string name="estimate_item_submit_hint">请输入整改措施</string>
    <string name="estimate_item_submit_img">整改图片</string>
    <string name="estimate_submit_input_msg">您必须输入整改内容和图片</string>
    <string name="title_report_project">项目名称</string>
    <string name="title_report_area">区域名称</string>
    <string name="title_report_date">报告日期</string>
    <string name="title_report_incharger">负责人</string>
    <string name="title_report_reporter">评估单位</string>
    <string name="title_report_supevision">监理单位</string>
    <string name="title_report_constraction">总包单位</string>
    <string name="title_report_remark">备注</string>
    <string name="title_measure_score">实测得分</string>
    <string name="title_deducting_score">质量扣分</string>
    <string name="title_manage_score">管理行为</string>
    <string name="title_safe_score">文明安全</string>
    <string name="title_total_score">综合得分</string>
    <string name="label_check_mark">√</string>
    <string name="label_not_check_marl">×</string>
    <string name="special_check_submit_input_msg">您必须将结果填写完整</string>
    <string name="title_passport_name">证照名称</string>
    <string name="title_passport_name_hint">请输入证照名称</string>
    <string name="title_passport_type">证照类型</string>
    <string name="title_passport_type_hint">请选择证照类型</string>
    <string name="title_passport_resource">对应资源</string>
    <string name="title_passport_resource_hint">请选择对应资源</string>
    <string name="title_passport_apply_date">申办日期</string>
    <string name="title_passport_apply_date_hint">请选择申办日期</string>
    <string name="title_passport_confirm_date">证照日期</string>
    <string name="title_passport_confirm_date_hint">请选择发证日期</string>
    <string name="title_passport_expire_date">到期日期</string>
    <string name="title_passport_expire_date_hint">请选择到期日期</string>
    <string name="title_passport_warning_date">提醒日期</string>
    <string name="title_passport_warning_date_hint">请选择提醒日期</string>
    <string name="title_passport_file">相关附件</string>
    <string name="welcome_to_message">欢迎你提出宝贵的意见和建议</string>
    <string name="feed_back_content">反馈内容</string>
    <string name="switch_on">是</string>
    <string name="switch_off">否</string>
    <string name="switch_confirm">确定</string>
    <string name="switch_cancel">取消</string>
    <string name="user_head_img_setting">请设置头像</string>
    <string name="user_head_img_camera">拍照</string>
    <string name="user_head_img_photo">从相册选取</string>
    <string name="upload_image_success">上传图片成功</string>
    <string name="ic_message_setting">消息</string>
    <string name="ic_system_setting">外部系统绑定</string>
    <string name="ic_system_binded">已绑定</string>
    <string name="ic_system_not_binded">未绑定</string>
    <string name="dialog_bind_system">绑定用户</string>
    <string name="dialog_confirm_unbind">是否确认解决绑定，这会影响到部分功能？</string>
    <string name="ic_server_setting">服务器绑定</string>
    <string name="common_image_description">这是一张图片</string>
    <string name="no_server_info">没有设定服务器信息</string>
    <string name="do_not_have_network">没有可以使用的网络</string>
    <string name="no_response_json">没有取到数据</string>
    <string name="no_image_to_show">没有图片可以显示</string>
    <string name="fetch_response_data_error">获取数据失败，请联系系统管理员。</string>
    <string name="login_failed">登录失败</string>
    <string name="update_failed">更新失败</string>
    <string name="login_successed">登录成功</string>
    <string name="sex_selected_sex">请选择性别</string>
    <string name="login_id_must_input">请输入登录名</string>
    <string name="user_name_must_input">请输入用户名</string>
    <string name="user_email_must_input">请输入邮箱</string>
    <string name="user_phone_must_input">请输入电话</string>
    <string name="press_back_noce_more">再次按下返回键退出</string>
    <string name="download_task_failed">下载任务失败</string>
    <string name="no_app_can_open_pdf">您没有可以打开PDF文件的工具</string>
    <string name="find_new_version">发现新版本，是否更新？</string>
    <string name="upgrade_message">红星OM更新......</string>
    <string name="start_downloading">开始下载......</string>
    <string name="download_finished">下载完成</string>
    <string name="download_failed">下载失败</string>
    <string name="save_success">保存成功</string>
    <string name="need_storage_permission">需要外部存储的读写权限才能够正常运行</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">设定</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>