<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_change_mode"
        android:icon="@drawable/ic_view_module_white"
        android:title="@string/action_change_mode"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/action_downloadAll"
        android:orderInCategory="100"
        android:title="@string/action_download_all"
        app:showAsAction="never" />

    <item android:id="@+id/action_task"
        android:orderInCategory="100"
        android:title="@string/action_task"
        app:showAsAction="never" />

</menu>