<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_white_corner">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:layout_marginBottom="10dp"
        android:textSize="17sp"
        android:text="@string/dialog_bind_system"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:background="@color/colorGray">
    </LinearLayout>

    <EditText
        android:id="@+id/loginId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLightBlack"
        android:inputType="text"
        android:hint="@string/txt_login_id"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/txt_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:textSize="17sp"
            android:text="@string/switch_cancel"/>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorGray">
        </LinearLayout>

        <TextView
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:textSize="17sp"
            android:text="@string/switch_confirm"/>

    </LinearLayout>

</LinearLayout>