<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_login">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dip"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dip"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/loginId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_login_id"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/title_activity_login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_corner"
            android:layout_marginTop="16dp"
            android:text="@string/btn_login"
            android:textSize="@dimen/common_font_big"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing_xbig"
            android:layout_marginRight="@dimen/common_spacing_big"
            android:layout_marginEnd="@dimen/common_spacing_big"
            android:layout_gravity="end"
            android:visibility="gone"
            android:text="@string/txt_register"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/common_font_middle"/>

    </LinearLayout>
</LinearLayout>
