<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".FeedbackActivity">

    <ProgressBar
        android:id="@+id/loading_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="@dimen/ui_progress_bar_size"
        android:layout_height="@dimen/ui_progress_bar_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dip"/>

    <LinearLayout
        android:id="@+id/content_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:padding="@dimen/common_spacing_big"
            android:text="@string/welcome_to_message"/>

        <EditText
            android:id="@+id/txtContent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ui_text_area_height"
            android:padding="@dimen/common_spacing_big"
            android:gravity="top"
            android:hint="@string/feed_back_content"
            android:textSize="@dimen/common_font_middle"
            android:background="@null"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_spacing_big"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnAddImage"
                android:layout_width="@dimen/ui_image_row_height"
                android:layout_height="@dimen/ui_image_row_height"
                android:src="@drawable/add_image_pressed"
                android:contentDescription="@string/common_image_description"/>

            <com.purplelight.redstar.component.view.RemovableImage
                android:id="@+id/imageView"
                android:layout_width="@dimen/ui_image_row_height"
                android:layout_height="@dimen/ui_image_row_height"
                android:visibility="gone">
            </com.purplelight.redstar.component.view.RemovableImage>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
